--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Snake Game</title>
     <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body class="background">
@@ -18,7 +19,7 @@
         </div>
         <div class="row d-flex justify-content-center ">
             <div class="jogo">
-                <canvas id="canvas" width="600" height="600"></canvas>
+                <canvas id="canvas" width="500" height="500"></canvas>
             </div>
         </div>
         <div class="row d-flex justify-content-center" >
@@ -27,11 +28,8 @@
                 </div>
         </div>
         <div class="row d-flex justify-content-center">
-            <h3 class="tituloAbout">About:</h3>
-        </div>
-        <div class="row d-flex justify-content-center">
             <p class="about">
-                    This game was created by João Pedro, an interaction design student at PUC-SP.</p>
+            Feito com <i class="fas fa-heart"></i> por <span><a href="https://instagram.com/jpmmatias">  @jpmmatias</a></span></p>
         </div>
         
     </div>
